--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,15 @@
 }
 
 
-.assist h1 {
-  text-align: center;
-  font-size: 70px;
-  letter-spacing: 3px;
-  color: aquamarine;
-  padding-top: 20px;
-  margin-bottom: 80px;
-  position: fixed;
-  left: 44.5%;
+
+.showMenu {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  padding: 2px 10px;
+    color: white;
+    font-weight: 600;
+    background-color: #3b627a;
+    cursor: pointer;
 }
+
