--- a/src/Sidebar2.css
+++ b/src/Sidebar2.css
@@ -1,23 +1,23 @@
-.Sidebar {
+.Sidebar2 {
     height: 100%;
-    width: 250px;
+    width: 100%;
     background-color: #2d445d;
     z-index: 1000;
     position: fixed;
     top: 0px
 }
 
-.SidebarList {
+.SidebarList2 {
     height: auto;
     padding: 0;
     width: 100%;
 }
 
-.SidebarList #active {
+.SidebarList2 #active {
     background-color: #3b627a;
 }
 
-.SidebarList .row {
+.SidebarList2 .row {
     width: 100%;
     height: 60px;
     display: flex;
@@ -26,7 +26,7 @@
     align-items: center;
 }
 
-.SidebarList .row:hover {
+.SidebarList2 .row:hover {
     cursor: pointer;
     background-color: #2a3d54;
 }
@@ -41,8 +41,8 @@
     flex: 70%
 }
 
-@media screen and (max-width:599px) {
-    .Sidebar {
+@media screen and (min-width:600px) {
+    .Sidebar2 {
         display: none;
     }
 }
