--- a/src/SidebarIcon.css
+++ b/src/SidebarIcon.css
@@ -24,3 +24,21 @@
     margin-top: 10px;
     letter-spacing: -1px;
 }
+
+.closeMenu {
+    position: absolute;
+    right: 5%;
+    padding: 2px 10px;
+    color: white;
+    font-weight: 600;
+    background-color: #3b627a;
+    cursor: pointer;
+}
+
+
+
+@media screen and (min-width:600px) {
+    .closeMenu {
+        display: none;
+    }
+}
