--- a/src/User.css
+++ b/src/User.css
@@ -1,7 +1,7 @@
 .user {
     width: 40%;
     position: absolute;
-    top: 20%;
+    top: 10%;
     left: 35%;
 }
 
@@ -20,6 +20,10 @@
     font-size: 30px;
  }
 
+ .user li:hover {
+    background-color: #2a3d54;
+ }
+
  .point {
     font-size: 20px;
  }
@@ -30,6 +34,10 @@
     font-weight: 600;
     background-color: #3b627a;
     cursor: pointer;
+ }
+
+ .contributionSend:hover {
+    background-color: #2a3d54;
  }
 
  .contributionForm {
@@ -70,6 +78,7 @@
 }
 
 .messageForm {
+    resize: none;
     width: 300px;
     height: 100px;
     padding: 5px 10px;
@@ -102,4 +111,30 @@
 
 .icon2 {
     width: 30px;
+}
+
+
+
+@media screen and (max-width: 960px) {
+    .user {
+        width: 60%;
+        position: absolute;
+  
+    }
+    .user li {
+        padding: 20px 50px ;
+    }
+}
+
+@media screen and (max-width: 499px) {
+    .user {
+        width: 100%;
+        position: absolute;
+        top: 10%;
+        left: 0%;
+        
+    }
+    .messageForm {
+        margin-right: 1000px;
+    } 
 }
