--- a/src/User.css
+++ b/src/User.css
@@ -16,8 +16,9 @@
     background-color: #2d445d;
     padding: 10px 100px;
     text-align: center;
-    border-top: 10px solid #3b627a;
+    border: solid black;
     font-size: 30px;
+    margin-top: 10px;
  }
 
  .user li:hover {
