--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -16,7 +16,7 @@
   .formContainer form {
     width: 70%;
     max-width: 450px;
-    border: 1px solid #dfefef;
+    border: 3px solid #2d445d;
     padding: 30px;
     border-radius: 10px;
     background-color: #fbf5f5;
